==> released/STM32F401_Cube_FW_F4_V1.18.0_I2C_LSM6DS3/Projects/STM32F401RE-Nucleo/Templates/Src/stm32f4xx_LSM6DS3.c <==
#include "stm32f4xx_hal.h"
#include "stm32f4xx_LSM6DS3.h"
#include <stdio.h>
#include <math.h>

uint8_t appLSM6DS3_Read(uint8_t DeviceAddr, uint8_t RegisterAddr,
                              uint16_t NumByteToRead,
                              uint8_t* pBuffer)
{
	HAL_StatusTypeDef status = HAL_OK;

	#if defined (HAL_I2C_LIBRARY_MEM)
	{
		status = HAL_I2C_Mem_Read(&I2C_LSM6DS3_Handle, DeviceAddr, ( uint16_t )RegisterAddr, I2C_MEMADD_SIZE_8BIT, pBuffer, NumByteToRead,
		                         I2C_LSM6DS3_Timeout);
	}
	#endif

	#if defined (HAL_I2C_LIBRARY_DISCRETE)
	{
		uint8_t Cmd = RegisterAddr;
		uint16_t Len = NumByteToRead;

		I2C_Master_Write_Single(DeviceAddr,(uint8_t*)&Cmd,1);//write which function code
		I2C_Master_Write_Single(DeviceAddr,(uint8_t*)&Len,2);//request how many bytes data
		I2C_Master_Read_Single(DeviceAddr,(uint8_t*)pBuffer,NumByteToRead);//get data  , with requested bytes 
	}
	#endif	

	/* Check the communication status */
	if( status != HAL_OK )
	{
		/* Execute user timeout callback */
		appLSM6DS3_I2C_DeInit();
		return 1;
	}
	else
	{
		return 0;
	}
	
}

uint8_t appLSM6DS3_Write(uint8_t DeviceAddr, uint8_t RegisterAddr,
                               uint16_t NumByteToWrite,
                               uint8_t* pBuffer)
{
	HAL_StatusTypeDef status = HAL_OK;

	#if defined (HAL_I2C_LIBRARY_MEM)
	{
		status = HAL_I2C_Mem_Write(&I2C_LSM6DS3_Handle, DeviceAddr, ( uint16_t )RegisterAddr, I2C_MEMADD_SIZE_8BIT, pBuffer, NumByteToWrite,
		                          I2C_LSM6DS3_Timeout);
	}
	#endif

	#if defined (HAL_I2C_LIBRARY_DISCRETE)
	{
		uint8_t Cmd = RegisterAddr;
		uint16_t Len = NumByteToWrite;

		I2C_Master_Write_Single(DeviceAddr,(uint8_t*)&Cmd,1);//write which function code
		I2C_Master_Write_Single(DeviceAddr,(uint8_t*)&Len,2);//request how many bytes data
		I2C_Master_Write_Single(DeviceAddr,(uint8_t*)pBuffer,NumByteToWrite);//get data  , with requested bytes 
	}
	#endif	
	
	/* Check the communication status */
	if( status != HAL_OK )
	{
		/* Execute user timeout callback */
		appLSM6DS3_I2C_DeInit();
		return 1;
	}
	else
	{
		return 0;
	}
	
}

uint8_t appLSM6DS3_I2C_Init(void)
{ 
	if(HAL_I2C_GetState( &I2C_LSM6DS3_Handle) == HAL_I2C_STATE_RESET )
	{
		/* I2C_EXPBD peripheral configuration */
		I2C_LSM6DS3_Handle.Init.ClockSpeed 		= LSM6DS3_I2C_SPEED;
		I2C_LSM6DS3_Handle.Init.DutyCycle 		= I2C_DUTYCYCLE_2;
		I2C_LSM6DS3_Handle.Init.OwnAddress1    	= 0x33;
		I2C_LSM6DS3_Handle.Init.AddressingMode 	= I2C_ADDRESSINGMODE_7BIT;
		I2C_LSM6DS3_Handle.Instance            	= I2Cx;

		/* Init the I2C */
		HAL_I2C_Init( &I2C_LSM6DS3_Handle );
	}

	if( HAL_I2C_GetState( &I2C_LSM6DS3_Handle) == HAL_I2C_STATE_READY )
	{
		return 0;
	}
	else
	{
		return 1;
	}
  
}

void appLSM6DS3_I2C_DeInit(void)
{
	/* De-initialize the I2C comunication bus */
	HAL_I2C_DeInit( &I2C_LSM6DS3_Handle );

	/* Re-Initiaize the I2C comunication bus */
	appLSM6DS3_I2C_Init();	
}
