==> released/STM32F401_DSP_StdPeriph_Lib_V1.7.0_I2C_LSM6DS3_EEP_Emulate/Project/Template/src/stm32f4xx_LSM6DS3.c <==
#include "stm32f4xx_i2c.h"
#include "stm32f4xx_LSM6DS3.h"
#include <stdio.h>
#include <math.h>

void appLSM6DS3_Read(uint8_t DeviceAddr, uint8_t RegisterAddr,
                              uint16_t NumByteToRead,
                              uint8_t* pBuffer)
{
	drvLSM6DS3_I2C_ReadMulti(LSM6DS3_I2C,DeviceAddr,RegisterAddr,pBuffer,NumByteToRead);
	
}

void appLSM6DS3_Write(uint8_t DeviceAddr, uint8_t RegisterAddr,
                               uint16_t NumByteToWrite,
                               uint8_t* pBuffer)
{
	drvLSM6DS3_I2C_WriteMulti(LSM6DS3_I2C,DeviceAddr,RegisterAddr,pBuffer,NumByteToWrite);
	
}

void appLSM6DS3_I2C_Init(void)
{ 
	I2C_InitTypeDef I2C_InitStructure;

	appLSM6DS3_LowLevel_Init();

	I2C_SoftwareResetCmd(LSM6DS3_I2C, ENABLE);

	I2C_DeInit(LSM6DS3_I2C);
	I2C_Cmd(LSM6DS3_I2C, DISABLE);

	/* LSM6DS3_I2C Periph clock enable */
	RCC_APB1PeriphClockCmd(LSM6DS3_I2C_CLK, ENABLE);

	/* Configure LSM6DS3_I2C for communication */
	I2C_InitStructure.I2C_Mode = I2C_Mode_I2C;
	I2C_InitStructure.I2C_DutyCycle = I2C_DutyCycle_2;
	I2C_InitStructure.I2C_OwnAddress1 = 0x33;
	I2C_InitStructure.I2C_Ack = I2C_Ack_Enable;
	I2C_InitStructure.I2C_AcknowledgedAddress = I2C_AcknowledgedAddress_7bit;
	I2C_InitStructure.I2C_ClockSpeed = LSM6DS3_I2C_SPEED;

	I2C_Cmd(LSM6DS3_I2C, ENABLE);
	I2C_Init(LSM6DS3_I2C, &I2C_InitStructure);
  
}

void appLSM6DS3_I2C_DeInit(void)
{
	/* sEE_I2C Peripheral Disable */
	I2C_Cmd(LSM6DS3_I2C,DISABLE);
	/* sEE_I2C DeInit */
	I2C_DeInit(LSM6DS3_I2C);
	/* sEE_I2C Periph clock disable */
	RCC_APB1PeriphClockCmd(LSM6DS3_I2C_CLK, DISABLE);
	
}
